--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "ton-premium-nft-marketplace",
+  "name": "dchainainftmarketplace",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
+    "@thirdweb-dev/chains": "^0.1.120",
+    "@thirdweb-dev/react": "^4.4.0",
+    "@thirdweb-dev/sdk": "^4.0.28",
+    "ethers": "^5",
+    "next": "^13",
+    "nextjs-progressbar": "^0.0.16",
+    "react": "^18.2",
+    "react-dom": "^18.2",
+    "react-hook-form": "^7.43.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "^18.11.11",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "^13",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.4"
   }
 }
